--- a/style.css
+++ b/style.css
@@ -1,7 +1,33 @@
-.parent{
+.navbar{
+    border: 2px solid black;
     display: flex;
+    margin: 10px;
+    padding: 2px;
     justify-content: space-around;
-    background-color:aqua;
-    padding: 10px 0px 10px 0px;
+    background-color: aquamarine;
+    align-items: center;
 }
-    
+.navbar a:hover {
+    text-decoration-color: red;
+}
+div2{
+    display: contents;
+    justify-content: center;
+}    
+p{
+    text-align-last: left;
+}
+
+.pic{
+    display: flex;
+    justify-content: center;
+}
+.map{
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+}
+title{
+    display: contents;
+    justify-content: center;
+}
